Completed Task Two, started main.cpp

--- a/DLETasks/Week1/Week1.vcxproj
+++ b/DLETasks/Week1/Week1.vcxproj
@@ -119,7 +119,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Task1.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="TaskOne.h" />
+    <ClCompile Include="TaskTwo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
