Unfinished task three implementation

--- a/DLETasks/Week1/Week1.vcxproj
+++ b/DLETasks/Week1/Week1.vcxproj
@@ -123,6 +123,10 @@
     <ClCompile Include="TaskOne.h" />
     <ClCompile Include="TaskTwo.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Task.h" />
+    <ClInclude Include="TaskThree.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
