Completed COMP1000 Week 2

--- a/DLE/COMP1000/Week2/Week2.vcxproj.filters
+++ b/DLE/COMP1000/Week2/Week2.vcxproj.filters
@@ -23,5 +23,17 @@
     <ClInclude Include="TaskOne.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TaskTwo.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskThree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskFour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskFive.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
