--- a/DLE/COMP1000/Week2/Week2.vcxproj
+++ b/DLE/COMP1000/Week2/Week2.vcxproj
@@ -128,7 +128,11 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="TaskFive.h" />
+    <ClInclude Include="TaskFour.h" />
     <ClInclude Include="TaskOne.h" />
+    <ClInclude Include="TaskThree.h" />
+    <ClInclude Include="TaskTwo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
