--- a/DLE/COMP1001/Week3-Part1/Week3-Part1.vcxproj
+++ b/DLE/COMP1001/Week3-Part1/Week3-Part1.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{030A3ACE-70D6-4FAF-8217-A36CF81D1758}</ProjectGuid>
+    <ProjectGuid>{ed80ac12-8a22-4b66-a832-77d7171769b3}</ProjectGuid>
     <RootNamespace>COMP1001</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Week2</ProjectName>
+    <ProjectName>Week3-Part1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
