--- a/Coursework/COMP1001/COMP1001 - Assessment 1/Question 3/Question 3.vcxproj
+++ b/Coursework/COMP1001/COMP1001 - Assessment 1/Question 3/Question 3.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{030A3ACE-70D6-4FAF-8217-A36CF81D1758}</ProjectGuid>
     <RootNamespace>COMP1001</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>COMP1001 - Assessment 1</ProjectName>
+    <ProjectName>Question 2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
