--- a/DLE/COMP1001/Week6-Part4/Week6-Part4.vcxproj
+++ b/DLE/COMP1001/Week6-Part4/Week6-Part4.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{bb869c5e-4995-422f-bc4f-752b0ef1ffcc}</ProjectGuid>
+    <ProjectGuid>{32ACF0D9-EAA8-4331-ABA5-8B052D28967F}</ProjectGuid>
     <RootNamespace>Week6</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Week6-Part4</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
